debug layout issue on desktop, clean up css file

--- a/cart-app/src/styles/Cart.scss
+++ b/cart-app/src/styles/Cart.scss
@@ -3,26 +3,26 @@
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+// GENERAL
+.left-gutter {
+    margin-left: 1rem;
+}
+
 // CART
 .cart {
     margin: 3rem auto;
     max-width: 60rem;
 }
 
-// GENERAL
-.left-gutter {
-    margin-left: 1rem;
-}
-
 // BUTTON
 .button {
     background-color: #ebebeb;
-    padding: .5rem .75rem;
-    font-weight: 600;
-    font-size: .75rem;
     border: none;
     cursor: pointer;
+    font-size: .75rem;
+    font-weight: 600;
     max-width: min-content;
+    padding: .5rem .75rem;
 
     &:hover {
         background-color: #000;
@@ -50,9 +50,9 @@
 }
 
 .subheader__wrapper {
+    align-items: baseline;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
 }
 
 // TOTAL
@@ -63,39 +63,32 @@
 
 // PRODUCT LIST
 .product-list {
-    padding: 0;
     border-bottom: 0.063rem solid #cdcdcd;
-}
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    padding: 0;
 
-@media (min-width: 800px) {
-  .product-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
+    @media (min-width: 800px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 // PRODUCT LIST ITEM
 .product-list-item {
-    list-style-type: none;
-    border: 0.063rem solid #000;
-    padding: 1rem;
     border-radius: 1rem;
-    margin-bottom: 1rem;
+    border: 0.063rem solid #000;
     display: flex;
     flex-direction: column;
-}
-
-@media (min-width: 800px) {
-    .product-list-item {
-        width: 30%;
-    }
+    list-style-type: none;
+    margin-bottom: 1rem;
+    padding: 1rem;
 }
 
 .product-list-item__name{
-    margin: 0;
-    font-weight: 800;
     font-size: 1rem;
+    font-weight: 800;
+    margin: 0;
 }
 
 .product-list-item__price {
